updates the eclipse event descriptions

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -19,17 +19,17 @@
         La intensidad de la luz solar hace que no sea seguro mirar al sol sin gafas protectoras especiales hasta que el eclipse sea total, los pocos minutos durante los que la luna eclipsa al sol por completo.
         Ambos cuerpos celestes parecen ser del mismo tamaño.La luz solar es tan brillante que borra todas las características de la luna, por eso la luna se ve como un disco liso de obsidiana.
         Durante los siguientes noventa minutos, el disco oscuro de la luna avanzará por encima del sol bloqueando progresivamente la mayor parte de su luz y calor, hasta que se produzca el eclipse total.
-        \n\nPuede utilizar esos minutos para explorar las imágenes del Rumble Map, y las descripciones de audio de los fenómenos incomparables de un eclipse total.
+        \n\n Puede utilizar esos minutos para explorar las imágenes del Rumble Map, y las descripciones de audio de los fenómenos incomparables de un eclipse total.
         En los momentos previos, durante y después del eclipse total, esta aplicación ofrecerá detalladas imágenes y descripciones de este extraño y fascinante acontecimiento estelar.
-        \n\nLa atmósfera exterior del sol denominada corona normalmente no se puede ver desde la superficie terrestre.
+        \n\nInformación Científica Adicional: \n La atmósfera exterior del sol denominada corona normalmente no se puede ver desde la superficie terrestre.
         Para estudiar la corona, los científicos envían satélites al espacio para hacer observaciones de la corona en longitudes de onda de luz que el ojo humano no puede detectar.
         Por ejemplo, esta imagen del sol fue tomada por un telescopio de rayos X en la nave espacial Hinode que produjo una imagen por rayos X del sol siendo eclipsado por la luna como se ve desde el espacio.
         El eclipse solar total constituye una oportunidad excepcional para ver la corona desde la tierra con luz visible.</string>
 
     <string name="bailys_beads_description">En el lado derecho de la luna, resplandecen orbes de luz solar fulgurante desde el contorno del oscuro disco lunar.
         Estas áreas finales de la luz solar, llamadas Perlas de Baily, parecen perlas brillantes sobre un hilo, que se ven intensamente luminosas por la falta de luz a su alrededor.
-        \n\nEn el Rumble Map, explore las características entre la luna, la corona del sol y las Perlas de Baily que son intensas e irregulares.
-        \n\nNi siquiera esta pequeña parte de la luz del sol se puede ver sin gafas protectoras especiales.
+        \n\n Explicación de qué podrá sentir al interactuar: \n En el Rumble Map, explore las características entre la luna, la corona del sol y las Perlas de Baily que son intensas e irregulares.
+        \n\nInformación Científica Adicional: \n Ni siquiera esta pequeña parte de la luz del sol se puede ver sin gafas protectoras especiales.
         Si observa esta característica mirando directamente al sol, use filtros o gafas especiales para eclipse.
         Las Perlas de Baily aparecen porque la superficie lunar no es una esfera lisa y perfecta.
         Esta característica espectacular se produce por rayos de luz solar irradiados a través de los cañones y los valles que se encuentran entre las montañas de la luna.</string>
@@ -38,51 +38,44 @@
         Como si la luna fuera el centro de un girasol celeste, la corona se presenta en forma de suaves pétalos blancos, grandes canales de luz tenue que se van haciendo más estrechos en el cielo.
         Más cerca de la superficie del círculo plano y oscuro de la luna, la corona es un caos serpenteante de bucles y haces luminosos.
         Intensos hilos ardientes de luz parecen encender el contorno oscuro de la luna.
-        \n\nEn el Rumble Map, explore las características entre la luna y la corona del sol.
+        \n\n Cómo interactuar con el Rumble Map:\n En el Rumble Map, explore las características entre la luna y la corona del sol.
         Escuchará y sentirá variaciones al pasar los dedos por las diferentes características de la corona.
-        \n\nLa corona es la delgada atmósfera exterior del sol.
+        \n\n Información científica adicional:\n La corona es la delgada atmósfera exterior del sol.
         Con temperaturas de más de un millón de grados Fahrenheit, irradia luz con longitudes de onda que son demasiado cortas para ser vistas por el ojo humano (como los rayos X) y que son absorbidas por la atmósfera terrestre.
         Sin embargo, la corona refleja parte de la luz blanca proveniente de la fotosfera del sol que está por debajo.
         Este reflejo tenue, solo se puede ver cuando la fotosfera, que es mucho más brillante, se bloquea, como durante un eclipse total.</string>
 
     <string name="diamond_ring_description">En el lado izquierdo de la oscura luna, se observa una fina tajada de luz solar irradiada con candente intensidad.
         A medida que el área de luz solar reemergente aumenta, se parece a un diamante que irradia su luz brillante desde su lugar en el anillo circular del contorno de la luna.
-        \n\nNi siquiera esta pequeña parte de la luz del sol se puede ver sin gafas protectoras especiales.
+        \n\nInformación científica adicional:\nNi siquiera esta pequeña parte de la luz del sol se puede ver sin gafas protectoras especiales.
         Si observa esta característica mirando directamente al sol, use filtros o gafas especiales para eclipse.
         A medida en que la luna apenas se mueve de la superficie solar, su potente luz se asoma por el costado de la luna.
         La luz solar es tan intensa que hasta esta pequeña parte domina el cielo.</string>
 
     <string name="helmet_streamers_description">Proyecciones de luz provenientes de la atmósfera exterior del sol, llamadas cintas de casco, se extienden en todas direcciones desde la parte posterior de la luna.
         En contraste con la luna, oscura y sin rasgos distintivos, las cintas pálidas y etéreas se ven delicadas como un encaje.
-        Las cintas más grandes tienen una forma cónica que se asemeja a los pétalos de una flor.
-        Se extienden desde lados opuestos del sol, con rayos de luz más pequeños entre ellas.
-        \n\nAl pasar el dedo por una cinta de casco, se puede sentir que los suaves arcos llegan a largos extremos puntiagudos al extenderse hacia afuera desde la base del sol.
-        \n\nLas cintas de casco se forman a partir de dos procesos diferentes.
-        La forma de arco de las cintas proviene de concentraciones de campos magnéticos en la superficie del sol, que se extienden hacia afuera y el interior de la corona, y luego se arquean nuevamente hacia abajo hasta la superficie, para conectarse con otras partes del campo magnético de polaridad opuesta.
+        Las cintas más grandes tienen una forma cónica que se asemeja a los pétalos de una flor. Se extienden desde lados opuestos del sol, con rayos de luz más pequeños entre ellas.
+        \n\nExplicación de qué podrá sentir al interactuar:\Al pasar el dedo por una cinta de casco, se puede sentir que los suaves arcos llegan a largos extremos puntiagudos al extenderse hacia afuera desde la base del sol.
+        \n\nInformación científica adicional:\nLas cintas de casco se forman a partir de dos procesos diferentes. La forma de arco de las cintas proviene de concentraciones de campos magnéticos en la superficie del sol, que se extienden hacia afuera y el interior de la corona, y luego se arquean nuevamente hacia abajo hasta la superficie, para conectarse con otras partes del campo magnético de polaridad opuesta.
         Las largas partes puntiagudas superiores de las cintas, provienen de las corrientes de gas que emanan de la corona al espacio interplanetario y forman el viento solar.</string>
 
     <string name="prominence_description">De la superficie oscura de la luna parecen saltar bucles ardientes de una caliente luz rosada.
         Con el blanco puro de la  corona de fondo, estas prominencias de color rosado parecen bailar sobre la luna como líneas de neón líquido.
-        \n\nAl interactuar con una prominencia, podrá advertir un contraste marcado debido a su intensa luminosidad en relación tanto con la luna como con la corona del sol.
-        \n\nLas prominencias son campos magnéticos que están llenos de material sumamente denso, lo cual las hace mucho más luminosas que el fondo circundante.
+        \n\nExplicación de qué podrá sentir al interactuar:\nAl interactuar con una prominencia, podrá advertir un contraste marcado debido a su intensa luminosidad en relación tanto con la luna como con la corona del sol.
+        \n\nInformación científica adicional:\nLas prominencias son campos magnéticos que están llenos de material sumamente denso, lo cual las hace mucho más luminosas que el fondo circundante.
         Los campos magnéticos de las prominencias pueden ser muy complicados, lo cual les confiere formas complejas y dinámicas.</string>
 
     <string name="totality_description">Este es el eclipse total, cuando el disco oscuro de la luna cubre por completo el sol.
-        En este momento, en ausencia de toda luz solar, se revela su gran corona exterior.
-        Visibles exclusivamente durante un eclipse total, grandes florituras de luz denominadas cintas de casco se proyectan en todas direcciones detrás del oscuro disco lunar.
+        En este momento, en ausencia de toda luz solar, se revela su gran corona exterior. Visibles exclusivamente durante un eclipse total, grandes florituras de luz denominadas cintas de casco se proyectan en todas direcciones detrás del oscuro disco lunar.
         En el contorno de la luna, las cintas de casco son intensamente brillantes y se van desvaneciendo a hilos, de un blanco fantasmal, al extenderse por el espacio, lejos de la luna, como los pétalos de una flor.
-        \n\nEn el Rumble Map, explore la diferencia entre la luna y la corona solar.
-        \n\nDurante el eclipse total, podrá advertir cambios de temperatura y sonidos de la naturaleza, como de aves y viento.
-        \n\nDurante el eclipse solar total, y solo en el momento de la totalidad, se puede observar la corona del sol sin gafas protectoras.
-        La atmósfera exterior del sol, la corona, queda totalmente expuesta y puede verse desde tierra.
-        Queda claramente en evidencia la naturaleza altamente estructurada de la corona.
-        Esta estructura es producida por la interacción del intenso y complicado campo magnético del sol con el material que compone la corona.
-        Este material se denomina plasma, es como un gas, pero susceptible a los campos magnéticos.
+        \n\nExplicación de qué podrá sentir al interactuar:\nEn el Rumble Map, explore la diferencia entre la luna y la corona solar.\n\nInformación científica adicional:
+        \nDurante el eclipse total, podrá advertir cambios de temperatura y sonidos de la naturaleza, como de aves y viento.\nDurante el eclipse solar total, y solo en el momento de la totalidad, se puede observar la corona del sol sin gafas protectoras.
+        La atmósfera exterior del sol, la corona, queda totalmente expuesta y puede verse desde tierra. Queda claramente en evidencia la naturaleza altamente estructurada de la corona.
+        Esta estructura es producida por la interacción del intenso y complicado campo magnético del sol con el material que compone la corona.Este material se denomina plasma, es como un gas, pero susceptible a los campos magnéticos.
         El campo magnético le da forma al plasma de la corona formando los complicados diseños que se ven durante el eclipse.</string>
 
     <string name="sun_as_star_description">Enmarcado por una vista mayor del espacio, el viento solar prolonga las cintas de casco lejos, donde se pueden observar otras estrellas.
-        Muchas de esas estrellas también tienen planetas que orbitan a su alrededor.
-        Esos planetas pueden eclipsar la estrella madre al igual que la luna eclipsa nuestro sol.
+        Muchas de esas estrellas también tienen planetas que orbitan a su alrededor. Esos planetas pueden eclipsar la estrella madre al igual que la luna eclipsa nuestro sol.
         Los científicos pueden detectar planetas eclipsando a sus estrellas y determinar a qué distancia se encuentra el planeta respecto de su estrella y cuál es la masa del planeta.
         A partir de estos indicios y demás observaciones, los científicos intentan descubrir si existe vida en esos planetas que pueda estar viviendo sus propios eclipses.</string>
 </resources>
