--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="eclipse_features">Características del eclipse</string>
-    <string name="eclipse_center">El centro de eclipses</string>
+    <string name="eclipse_features">Características</string>
+    <string name="eclipse_center">Centro</string>
 
     <!-- general -->
     <string name="media">Medios de comunicación</string>
@@ -67,7 +67,7 @@
     <!-- about -->
     <string name="license">Licencia</string>
     <string name="open_src_libs">Bibliotecas de código abierto</string>
-    <string name="photo_credits">Crédito por la fotografía</string>
+    <string name="photo_credits">Créditos de fotografía</string>
     <string name="legal">Legal</string>
     <string name="libs_in_use">Bibliotecas que utilizamos</string>
     <string name="supported_eclipse">Eclipses que apoyamos</string>
