updates bio and image for joel

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -277,10 +277,9 @@
             Aspira a desarrollar aplicaciones que ayuden a las escuelas y demás instituciones a atraer a los jóvenes, haciendo de la educación el centro de sus vidas.
             En su tiempo libre, le gusta jugar al fútbol y cocinar con familiares y amigos.</item>
 
-        <item name="member_joel">Joel Goncalves is an Android developer from Brockton, Massachusetts
-            and a Computer Science graduate from the University of Massachusetts, Boston.
-            As a developer and budding entrepreneur, he is passionate about creating and contributing
-            to meaningful applications. As a hobby, he likes to travel, read philosophy and produce music.
+        <item name="member_joel">Joel Goncalves es un ingeniero de sistemas graduado de la universidad de Massachusetts, Boston.
+            El reside en Brockton, Massachusetts. Como un ingeniero, el es muy apasionado con lo de crear y contribuir a las aplicaciones significativas.
+            Como un pasatiempo, a el le gusta escalar, viajar y hacer deportes.
         </item>
 
         <item name="member_miles">Miles Gordon es un ingeniero en audio y artista multimedia de New England.
