--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -379,10 +379,9 @@
             In his free time, Arlindo enjoys playing soccer and cooking for his family and friends.
         </item>
 
-        <item name="member_joel">Joel Goncalves is an Android developer from Brockton, Massachusetts
-            and a Computer Science graduate from the University of Massachusetts, Boston.
-            As a developer and budding entrepreneur, he is passionate about creating and contributing
-            to meaningful applications. As a hobby, he likes to travel, read philosophy and produce music.
+        <item name="member_joel">Joel Goncalves is a software engineer from Brockton, Massachusetts and a Computer Science graduate from the University of Massachusetts, Boston.
+            As an engineer, he is passionate about creating and contributing to meaningful applications.
+            As a hobby, he likes to hike, travel and play sports.
         </item>
 
         <item name="member_miles">Miles Gordon is an audio engineer and multimedia artist from New England.
