adds menu option for selecting supported languages

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -31,6 +31,7 @@
     <string name="instructions">Instrucciones</string>
     <string name="welcome">Bienvenido</string>
     <string name="not_now">Ahora no</string>
+    <string name="language">Idioma</string>
 
     <!-- actions -->
     <string name="continue_text">Continuar</string>
