--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="description">Description</string>
     <string name="instructions">Instructions</string>
     <string name="welcome">Welcome</string>
+    <string name="language">Language</string>
 
     <string name="continue_text">Continue</string>
     <string name="skip">Skip</string>
