reads license from asset, adds privacy policy

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -69,6 +69,7 @@
     <string name="license">Licencia</string>
     <string name="open_src_libs">Bibliotecas de código abierto</string>
     <string name="photo_credits">Créditos de fotografía</string>
+    <string name="privacy_policy">Política de Privacidad</string>
     <string name="legal">Legal</string>
     <string name="libs_in_use">Bibliotecas que utilizamos</string>
     <string name="supported_eclipse">Eclipses que apoyamos</string>
