updates license details

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,7 +70,7 @@
     <string name="privacy_policy">Privacy Policy</string>
     <string name="legal">Legal</string>
     <string name="libs_in_use">Libraries We Use</string>
-    <string name="audiokit">AUDIOKIT</string>
+    <string name="jsyn_lib">JSyn</string>
 
     <string name="about_us">About Us</string>
     <string name="about_us_details">The Eclipse Soundscapes mobile application is a product of the Eclipse Soundscapes Project, which is an enterprise ARISA Lab, LLC.
@@ -531,28 +531,6 @@
 
     <string name="libraries_use_detail">The following sets forth attribution notices for third party software that may be contained in portions of the Eclipse Soundscapes product.
         We thank the open sources community for all of their contributions.\n</string>
-
-    <string name="audiokit_license">The MIT License (MIT)\n
-
-\nCopyright © 2016 Aurelius Prochazka\n
-
-\nPermission is hereby granted, free of charge, to any person obtaining a copy
-of this software and associated documentation files (the "Software"), to deal
-in the Software without restriction, including without limitation the rights
-to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-copies of the Software, and to permit persons to whom the Software is
-furnished to do so, subject to the following conditions:\n
-
-\nThe above copyright notice and this permission notice shall be included in
-all copies or substantial portions of the Software.\n
-
-\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
-THE SOFTWARE.\n</string>
 
 </resources>
 
