--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -84,7 +84,7 @@
     <string name="past_partners">Colaboradores anteriores</string>
     <string name="our_team">Nuestro equipo</string>
     <string name="feedback">Dar opinión</string>
-    <string name="privacy_policy_url" translatable="false"><![CDATA[https://arisalab.org/politica_de_privacidad_de_la_aplicacion_movil/]]></string>
+    <string name="privacy_policy_url" translatable="false"><![CDATA[https://eclipsesoundscapes.org/es/content/pol%C3%ADtica-de-privacidad-de-la-aplicaci%C3%B3n-m%C3%B3vil]]></string>
 
     <string name="libraries_use_detail">A continuación se establecen los avisos de derechos de autor para el software de terceros que puede ser parte de la aplicación móvil Eclipse Soundscapes.
         Agradecemos a la comunidad de código abierto por todas sus contribuciones.</string>
