--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -288,8 +288,8 @@
 
     <!-- About -->
     <string name="supported_eclipse">Eclipses We Support</string>
-    <string name="link_feedback_form" translatable="false"><![CDATA[http://eclipsesoundscapes.org/ES_MobileApp_Feedback]]></string>
-    <string name="privacy_policy_url" translatable="false"><![CDATA[https://arisalab.org/privacy-policy/]]></string>
+    <string name="link_feedback_form" translatable="false"><![CDATA[https://eclipsesoundscapes.org/ES_MobileApp_Feedback]]></string>
+    <string name="privacy_policy_url" translatable="false"><![CDATA[https://eclipsesoundscapes.org/content/eclipse-soundscapes-mobile-application-privacy-policy]]></string>
 
     <!-- Walkthrough -->
     <string name="walkthrough">Walkthrough</string>
