--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,6 +78,7 @@
         The development of the Eclipse Soundscapes mobile application is funded by NASA Space Science Education Consortium.</string>
 
     <!-- Eclipse Center -->
+    <string name="eclipse_center_lockout_details">Updated Eclipse data coming soon.</string>
     <string name="eclipse_countdown_title">Countdown Until Eclipse</string>
     <string name="countdown_format">Countdown until eclipse from your location, %1$s days, %2$s hours, %3$s minutes and %4$s seconds</string>
     <string name="event_section_desc">Events at closest location are below. Events include your local time and universal time.</string>
